# personal_site

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
public/assets/: README.md
public/js/: interop.js  pretext.js
scripts/: vendor-pretext.sh
src/: app.rs  db.rs  interop.rs  lib.rs  main.rs  models.rs
src/components/: photo.rs
src/pages/: about.rs  blog.rs  gpg.rs  mod.rs  projects.rs
style/: main.scss
